--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <html>
   <body>
   <font size=4><div id="where"></div></font>
+  <font size=4><div id="id"></div></font>
+  <font size=4><div id="agents"></div></font>
   <img id="picture" src="">
   <font size=3><div id="what"></div></font>
   <font size=3><div id="inventory"></div></font>
   <font size=3><div id="next"></div></font>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script>
+      var id;
+        $.get("/id", function (data) {
+          id = data;
+           $("#id").html("sessionid: " + data);
+        });
     $(function() {
       $("#where").html("booting...");
       where = "strong-hall";
 
       function refresh() {
-        $.get("/" + where, function (data) {
+        $.get("/agents", function (data) {
+           $("#agents").html(data);
+        });
+        $.get("/"  + where, function (data) {
            $("#where").html(data.text);
            $("#picture").attr("src","images/" + data.where);
            if (data.what == undefined || data.what.length == 0) {
@@ -81,7 +91,6 @@
       }
 
       refresh();
-
     });
   </script>
   </body>
